// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <Appearance /> when all props are defined matches snapshot 1`] = `
<article
  class="Appearance"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance--meta"
  >
    <div
      class="Meta Appearance--date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Date:
      </span>
       
      <span
        class="Meta--value"
      >
        <time
          class="DateTime"
          datetime="2018-01-04"
          title="Thursday, 4 January 2018"
        >
          Thursday, 4 January 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance--time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Time:
      </span>
       
      <span
        class="Meta--value"
      >
        <time
          class="DateTime"
          datetime="2018-01-04T00:00:00"
          title="12:00 am"
        >
          12:00 am
        </time>
        –
        <time
          class="DateTime"
          datetime="2018-01-05T00:00:00"
          title="12:00 am"
        >
          12:00 am
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance--location"
      title="Venue - 123 Address"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Location:
      </span>
       
      <span
        class="Meta--value"
      >
        Venue
      </span>
    </div>
    <div
      class="Meta Appearance--audience"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Audience:
      </span>
       
      <span
        class="Meta--value"
      >
        18+
      </span>
    </div>
  </div>
  <div
    class="Appearance--body"
  >
    <figure
      class="Image Appearance--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <div
      class="Appearance--details"
    >
      <section
        class="Appearance--description"
      >
        <p>
          Description
        </p>
      </section>
      <section
        class="Appearance--rsvp"
      >
        <a
          class="Appearance--rsvpLink Button"
          href="RSVP"
          rel="noopener"
          target="_blank"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z"
            />
          </svg>
           RSVP on Facebook
        </a>
      </section>
      <section
        class="Appearance--acts"
      >
        <h2>
          Featured acts
        </h2>
        <div
          class="Appearance--acts--items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing--link"
            >
              <div
                class="ActListing--details"
              >
                <h3>
                  Act name
                </h3>
                <section
                  class="ActListing--meta"
                >
                  <div
                    class="Meta ActListing--genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta--label"
                    >
                      Genre:
                    </span>
                     
                    <span
                      class="Meta--value"
                    >
                      Genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing--location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta--label"
                    >
                      Location:
                    </span>
                     
                    <span
                      class="Meta--value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="Image ActListing--image isLoading"
              >
                <div
                  class="Image--wrapper"
                >
                  <img
                    alt="Act name"
                    src="Image URL"
                  />
                  <span
                    class="Loader"
                  >
                    <div
                      class="Loader--animation"
                    >
                      <span />
                      <span />
                      <span />
                    </div>
                  </span>
                </div>
              </figure>
            </span>
          </article>
        </div>
      </section>
      <section
        class="Appearance--tickets"
      >
        <h2>
          Get tickets
        </h2>
        <div
          class="Appearance--tickets--items"
        >
          <article
            class="SaleListing"
          >
            <span
              class="SaleListing--link"
            >
              <div
                class="SaleListing--icon"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M128 160h320v192H128V160zm400 96c0 26.51 21.49 48 48 48v96c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48v-96c26.51 0 48-21.49 48-48s-21.49-48-48-48v-96c0-26.51 21.49-48 48-48h480c26.51 0 48 21.49 48 48v96c-26.51 0-48 21.49-48 48zm-48-104c0-13.255-10.745-24-24-24H120c-13.255 0-24 10.745-24 24v208c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24V152z"
                  />
                </svg>
              </div>
              <div
                class="SaleListing--details"
              >
                <h3>
                  Name: 
                  <span
                    class="Price"
                  >
                    $10
                  </span>
                </h3>
                <section
                  class="SaleListing--meta"
                />
              </div>
            </span>
          </article>
        </div>
      </section>
    </div>
    <section
      class="Appearance--images"
    >
      <h2>
        Photos
      </h2>
      <div
        class="ImageGallery Appearance--images--items"
      >
        <figure
          class="Image isLoading"
          role="button"
          tabindex="0"
        >
          <div
            class="Image--wrapper"
          >
            <img
              alt="Title 1"
              src="Image URL 1"
            />
            <span
              class="Loader"
            >
              <div
                class="Loader--animation"
              >
                <span />
                <span />
                <span />
              </div>
            </span>
          </div>
          <figcaption>
            Title 1
          </figcaption>
        </figure>
        <figure
          class="Image isLoading"
          role="button"
          tabindex="0"
        >
          <div
            class="Image--wrapper"
          >
            <img
              alt="Title 2"
              src="Image URL 2"
            />
            <span
              class="Loader"
            >
              <div
                class="Loader--animation"
              >
                <span />
                <span />
                <span />
              </div>
            </span>
          </div>
          <figcaption>
            Title 2
          </figcaption>
        </figure>
      </div>
    </section>
    <section
      class="Appearance--map"
    >
      <h2>
        Location
      </h2>
      <div
        class="Map"
      >
        <div
          class="Map-element Appearance--map--googleMap"
          style="position:absolute;width:100%;height:100%"
        >
          <div
            style="position:absolute;left:0;right:0;bottom:0;top:0;display:inherit"
          >
            Loading map...
          </div>
        </div>
      </div>
    </section>
  </div>
</article>
`;

exports[`[presentation] <Appearance /> when cancelled matches snapshot 1`] = `
<article
  class="Appearance isCancelled"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance--meta"
  >
    <div
      class="Meta Appearance--date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Date:
      </span>
       
      <span
        class="Meta--value"
      >
        <time
          class="DateTime"
          datetime="2018-01-04"
          title="Thursday, 4 January 2018"
        >
          Thursday, 4 January 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance--time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Time:
      </span>
       
      <span
        class="Meta--value"
      >
        <time
          class="DateTime"
          datetime="2018-01-04T00:00:00"
          title="12:00 am"
        >
          12:00 am
        </time>
        –
        <time
          class="DateTime"
          datetime="2018-01-05T00:00:00"
          title="12:00 am"
        >
          12:00 am
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance--location"
      title="Venue - undefined"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Location:
      </span>
       
      <span
        class="Meta--value"
      >
        Venue
      </span>
    </div>
  </div>
  <div
    class="Appearance--body"
  >
    <figure
      class="Image Appearance--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
        <div
          class="Meta Appearance--status"
        >
           
          <span
            class="Meta--label"
          >
            Status:
          </span>
           
          <span
            class="Meta--value"
          >
            Cancelled
          </span>
        </div>
      </div>
    </figure>
    <div
      class="Appearance--details"
    >
      <section
        class="Appearance--description"
      >
        <p>
          Description
        </p>
      </section>
      <section
        class="Appearance--acts"
      >
        <h2>
          Featured acts
        </h2>
        <div
          class="Appearance--acts--items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing--link"
            >
              <div
                class="ActListing--details"
              >
                <h3>
                  Act name
                </h3>
                <section
                  class="ActListing--meta"
                >
                  <div
                    class="Meta ActListing--genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta--label"
                    >
                      Genre:
                    </span>
                     
                    <span
                      class="Meta--value"
                    >
                      Genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing--location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta--label"
                    >
                      Location:
                    </span>
                     
                    <span
                      class="Meta--value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="Image ActListing--image isLoading"
              >
                <div
                  class="Image--wrapper"
                >
                  <img
                    alt="Act name"
                    src="Image URL"
                  />
                  <span
                    class="Loader"
                  >
                    <div
                      class="Loader--animation"
                    >
                      <span />
                      <span />
                      <span />
                    </div>
                  </span>
                </div>
              </figure>
            </span>
          </article>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Appearance /> when finishingAt is in the past matches snapshot 1`] = `
<article
  class="Appearance isFinished"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance--meta"
  >
    <div
      class="Meta Appearance--date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Date:
      </span>
       
      <span
        class="Meta--value"
      >
        <time
          class="DateTime"
          datetime="2018-01-04"
          title="Thursday, 4 January 2018"
        >
          Thursday, 4 January 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance--time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Time:
      </span>
       
      <span
        class="Meta--value"
      >
        <time
          class="DateTime"
          datetime="2018-01-04T00:00:00"
          title="12:00 am"
        >
          12:00 am
        </time>
        –
        <time
          class="DateTime"
          datetime="2017-12-31T00:00:00"
          title="12:00 am"
        >
          12:00 am
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance--location"
      title="Venue - undefined"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Location:
      </span>
       
      <span
        class="Meta--value"
      >
        Venue
      </span>
    </div>
  </div>
  <div
    class="Appearance--body"
  >
    <figure
      class="Image Appearance--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <div
      class="Appearance--details"
    >
      <section
        class="Appearance--description"
      >
        <p>
          Description
        </p>
      </section>
      <section
        class="Appearance--acts"
      >
        <h2>
          Featured acts
        </h2>
        <div
          class="Appearance--acts--items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing--link"
            >
              <div
                class="ActListing--details"
              >
                <h3>
                  Act name
                </h3>
                <section
                  class="ActListing--meta"
                >
                  <div
                    class="Meta ActListing--genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta--label"
                    >
                      Genre:
                    </span>
                     
                    <span
                      class="Meta--value"
                    >
                      Genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing--location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta--label"
                    >
                      Location:
                    </span>
                     
                    <span
                      class="Meta--value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="Image ActListing--image isLoading"
              >
                <div
                  class="Image--wrapper"
                >
                  <img
                    alt="Act name"
                    src="Image URL"
                  />
                  <span
                    class="Loader"
                  >
                    <div
                      class="Loader--animation"
                    >
                      <span />
                      <span />
                      <span />
                    </div>
                  </span>
                </div>
              </figure>
            </span>
          </article>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Appearance /> when only the required props are defined matches snapshot 1`] = `
<article
  class="Appearance"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance--meta"
  >
    <div
      class="Meta Appearance--date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Date:
      </span>
       
      <span
        class="Meta--value"
      >
        <time
          class="DateTime"
          datetime="2018-01-04"
          title="Thursday, 4 January 2018"
        >
          Thursday, 4 January 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance--time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Time:
      </span>
       
      <span
        class="Meta--value"
      >
        <time
          class="DateTime"
          datetime="2018-01-04T00:00:00"
          title="12:00 am"
        >
          12:00 am
        </time>
        –
        <time
          class="DateTime"
          datetime="2018-01-05T00:00:00"
          title="12:00 am"
        >
          12:00 am
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance--location"
      title="Venue - undefined"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Location:
      </span>
       
      <span
        class="Meta--value"
      >
        Venue
      </span>
    </div>
  </div>
  <div
    class="Appearance--body"
  >
    <figure
      class="Image Appearance--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <div
      class="Appearance--details"
    >
      <section
        class="Appearance--description"
      >
        <p>
          Description
        </p>
      </section>
      <section
        class="Appearance--acts"
      >
        <h2>
          Featured acts
        </h2>
        <div
          class="Appearance--acts--items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing--link"
            >
              <div
                class="ActListing--details"
              >
                <h3>
                  Act name
                </h3>
                <section
                  class="ActListing--meta"
                >
                  <div
                    class="Meta ActListing--genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta--label"
                    >
                      Genre:
                    </span>
                     
                    <span
                      class="Meta--value"
                    >
                      Genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing--location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta--label"
                    >
                      Location:
                    </span>
                     
                    <span
                      class="Meta--value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="Image ActListing--image isLoading"
              >
                <div
                  class="Image--wrapper"
                >
                  <img
                    alt="Act name"
                    src="Image URL"
                  />
                  <span
                    class="Loader"
                  >
                    <div
                      class="Loader--animation"
                    >
                      <span />
                      <span />
                      <span />
                    </div>
                  </span>
                </div>
              </figure>
            </span>
          </article>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Appearance /> when postponed matches snapshot 1`] = `
<article
  class="Appearance isPostponed"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance--meta"
  >
    <div
      class="Meta Appearance--date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Date:
      </span>
       
      <span
        class="Meta--value"
      >
        <time
          class="DateTime"
          datetime="2018-01-04"
          title="Thursday, 4 January 2018"
        >
          Thursday, 4 January 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance--time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Time:
      </span>
       
      <span
        class="Meta--value"
      >
        <time
          class="DateTime"
          datetime="2018-01-04T00:00:00"
          title="12:00 am"
        >
          12:00 am
        </time>
        –
        <time
          class="DateTime"
          datetime="2018-01-05T00:00:00"
          title="12:00 am"
        >
          12:00 am
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance--location"
      title="Venue - undefined"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta--label"
      >
        Location:
      </span>
       
      <span
        class="Meta--value"
      >
        Venue
      </span>
    </div>
  </div>
  <div
    class="Appearance--body"
  >
    <figure
      class="Image Appearance--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
        <div
          class="Meta Appearance--status"
        >
           
          <span
            class="Meta--label"
          >
            Status:
          </span>
           
          <span
            class="Meta--value"
          >
            Postponed
          </span>
        </div>
      </div>
    </figure>
    <div
      class="Appearance--details"
    >
      <section
        class="Appearance--description"
      >
        <p>
          Description
        </p>
      </section>
      <section
        class="Appearance--acts"
      >
        <h2>
          Featured acts
        </h2>
        <div
          class="Appearance--acts--items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing--link"
            >
              <div
                class="ActListing--details"
              >
                <h3>
                  Act name
                </h3>
                <section
                  class="ActListing--meta"
                >
                  <div
                    class="Meta ActListing--genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta--label"
                    >
                      Genre:
                    </span>
                     
                    <span
                      class="Meta--value"
                    >
                      Genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing--location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta--label"
                    >
                      Location:
                    </span>
                     
                    <span
                      class="Meta--value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="Image ActListing--image isLoading"
              >
                <div
                  class="Image--wrapper"
                >
                  <img
                    alt="Act name"
                    src="Image URL"
                  />
                  <span
                    class="Loader"
                  >
                    <div
                      class="Loader--animation"
                    >
                      <span />
                      <span />
                      <span />
                    </div>
                  </span>
                </div>
              </figure>
            </span>
          </article>
        </div>
      </section>
    </div>
  </div>
</article>
`;
